[package]
name = "rust_lib_sentence_maker_x"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
rand = "0.10.1"
sqlite = "0.37.0"
tempfile = "3.27.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
